<resources>
    <string name="app_name">KitchenKonnect</string>
    <string name="username">\@jorgekim</string>
    <string name="paolodeveloper">Paolo Ortega is an experienced chef who has worked in some of the best Italian restaurants in the world. His expertise in Italian cuisine has been invaluable in curating our app\'s collection of authentic Italian recipes.</string>
    <string name="vinadeveloper">Vina De Guzman is a food blogger and photographer who has a keen eye for visual design. She has been instrumental in creating the app\'s user-friendly interface and making sure that the recipes are presented in a visually appealing way.</string>
    <string name="cedricdeveloper">Cedric Pangan is a software engineer with a passion for developing mobile apps. He has been responsible for designing and building the app\'s architecture, ensuring that it is secure, fast, and reliable.</string>
    <string name="cedriccontact">cedric.pangan@neu.edu.ph\n0965-870-6196</string>
    <string name="vinacontact">vina.deguzman@neu.edu.ph\n0906-400-0224</string>
    <string name="paolocontact">paolo.ortega@neu.edu.ph\n0955-894-3405</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="usernamelgn">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="foodRecipeTitle">Adobong Manok</string>
    <string name="foodDesc">Adobo refers to a method of marinating and stewing for any cut of meat or fish in a briny mixture of vinegar, soy sauce, and spices. Filipino adobo should not be confused with the spicy Spanish adobo sauce. Although they both share the Spanish name, they are vastly different in flavor and ingredients</string>
    <string name="ingredients">2 tbsp canola oil\n6 cloves garlic crushed\n1 pc onion, sliced\n1 kilogram chicken cut ups\n2 tbsp vinegar\n1/4 cup soy sauce\n1 cup water\n2 pcs bay leaves\n1 tsp whole black peppercorns, slightly crushed\n2 pc Knorr chicken cubes\n1 tsp brown sugar packed\n</string>
    <string name="procedure">Step 1: Do this\nStep 2: Do that\nStep 3: Do something else</string>
    <string name="procedure1">Procedure</string>
    <string name="filipino_recipe">Filipino Recipe</string>
</resources>