<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    android:orientation="vertical"
    tools:context=".LoginScreen">

    <ImageView
        android:layout_width="324dp"
        android:layout_height="279dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/iconapp" />

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
        android:layout_marginTop="-100dp"
       android:orientation="vertical"
       android:background="@drawable/boxradius">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="22dp"
           android:fontFamily="@font/jonathan_signature"
           android:text="@string/welcome"
           android:textSize="50sp"
           android:textStyle="bold" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="5dp"
           android:fontFamily="@font/poppinsmedium"
           android:text="@string/sign_in_to_continue"
           android:textSize="15sp" />

       <EditText
           android:id="@+id/usernameEditTxt"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginTop="20dp"
           android:hint="@string/usernamelgn"
           android:drawableLeft="@drawable/usernameicon"
           android:drawablePadding="10dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:padding="15dp"
           android:inputType="textEmailAddress"
           android:fontFamily="@font/poppinsmedium"
           android:background="@drawable/et_custom"
           android:textSize="15sp" />

       <EditText
           android:id="@+id/passwordEditTxt"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:hint="@string/password"
           android:layout_marginLeft="20dp"
           android:drawableLeft="@drawable/password"
           android:drawablePadding="10dp"
           android:layout_marginRight="20dp"
           android:layout_marginTop="10dp"
           android:padding="15dp"
           android:fontFamily="@font/poppinsmedium"
           android:inputType="textPassword"
           android:background="@drawable/et_custom"
           android:textSize="15sp" />

       <Button
           android:id="@+id/loginBtn"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="50dp"
           android:layout_marginTop="15dp"
           android:layout_marginRight="50dp"
           android:background="@drawable/btn_custom"
           android:fontFamily="@font/poppinsmedium"
           android:text="@string/login"
           android:textColor="@android:color/white" />

       <TextView
           android:id="@+id/forgotTxtView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
           android:text="@string/forgot_password"
           android:textColor="@color/black" />
   </LinearLayout>




</LinearLayout>
